2002-01-12  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02823]
	* scripts/Makefile: don't use read -r 
			because Solaris 8 for x86 doesn't work

2002-01-12  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02822] Print FTP directory list for -dump_extra option
	* file.c (loadGeneralFile): remove FTPDIRtmp, use readFTPDir() instead
		save to buf->sourcefile for -dump_extra
	* ftp.c (FTPDIRtmp): deleted
	* ftp.c (openFTP): delete readFTPDir() part
	* ftp.c (readFTPDir): added
	* proto.h (readFTPDir): added

2002-01-11  Akinori Ito <aito@fw.ipsj.or.jp>

	* [w3m-dev 02819]
	* regex.c (RegexMatch): loop condition changed (from < to <= )
	* regex.c (regmatch_iter): end condition changed (from >= to >)
	* search.c (forwardSearch): next search fix

2002-01-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02818]
	* regex.c (regmatch_iter): return 0 if out of range

2002-01-11  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02817]
	* menu.c (menuBackwardSearch): new regexMatch()

2002-01-11  aito@fw.ipsj.or.jp

	* [w3m-dev 02815]
	* cookie.c (domain_match): use new regex
	* main.c (chkURLBuffer): use new regex
	* main.c (chkNMIDBuffer): use new regex
	* menu.c (menuForwardSearch): new regexMatch()
	* regex.c (RegexMatch): negative length means whole string
	* regex.c (RegexMatch): new regmatch()
	* regex.c (regmatch_sub_anytime): add 5th arg `char *'
	* regex.c (regmatch_iter): add 4th arg `char *'
	* regex.c (regmatch): add 3rd arg `char *'
	* url.c (openSocket): use new regex

2002-01-10  aito@fw.ipsj.or.jp

	* [w3m-dev 02811] new regexp implementation
	* regex.h: remove defines
	* regex.h: struct regexchar, struct regex
	* regex.c: include stdio.h, stdlib.h, string.h, config.h
	* regex.c: remove include fm.h
	* regex.c (NULL JP_CHARSET IS_ALPHA IS_KANJI1): define unless defined
	* regex.c (RE_*) define
	* regex.c (st_ptr): deleted
	* regex.c (regmatch): remove 4th arg `int'
	* regex.c (newRegex0): rewrite, based on old newRegex